--- a/views/diet.ejs
+++ b/views/diet.ejs
@@ -51,66 +51,50 @@
             </defs>
             </svg>
          <h1 class="cn-title">Diet</h1>
-         It can be easy to rush through life without stopping to notice much. Paying more attention to the present moment - to your own thoughts and feelings, and to the world around you – can improve your mental wellbeing.
-         Some people call this awareness "mindfulness". Mindfulness can help us enjoy life more and understand ourselves better. You can take steps to develop it in your own life.
+         What we eat doesn’t just affect our physical health: it can also affect our mental health and wellbeing.
+         Eating well – which means having a balanced diet full of vegetables and nutrients – can improve your sense of wellbeing and your mood.
       </section>
-      <div class="spacer layer1"></div>
-      <section class="cn-yellow">
-         <h1 class="cn-title">What is mindfulness?</h1>
-         Professor Mark Williams, former director of the Oxford Mindfulness Centre, says that mindfulness means knowing directly what is going on inside and outside ourselves, moment by moment.
-         "It's easy to stop noticing the world around us. It's also easy to lose touch with the way our bodies are feeling and to end up living 'in our heads' – caught up in our thoughts without stopping to notice how those thoughts are driving our emotions and behaviour," he says.
-         "An important part of mindfulness is reconnecting with our bodies and the sensations they experience. This means waking up to the sights, sounds, smells and tastes of the present moment. That might be something as simple as the feel of a banister as we walk upstairs.
-         "Another important part of mindfulness is an awareness of our thoughts and feelings as they happen moment to moment.
-         "It's about allowing ourselves to see the present moment clearly. When we do that, it can positively change the way we see ourselves and our lives."
+      <div class="spacer layer17"></div>
+      <section class="cn-grass">
+         <h1 class="cn-title">How are diet and mental health linked?</h1>
+         The relationship between our diet and our mental health is complex. However, research shows a link between what we eat and how we feel.
+         Eating well can help you feel better. You don't have to make big changes to your diet, but see if you can try some of these tips.
+         <div class="columns">      
+            <br/>  
+            <ul>
+                  <li>Eat regularly. This can stop your blood sugar level dropping, which can make you feel tired and bad-tempered.</li>
+                  <li>Stay hydrated. Even mild dehydration can affect your mood, energy level and ability to concentrate.</li>
+                  <li>Include more wholegrains, fruits and vegetables in your diet. They contain the vitamins and minerals your brain and body need to stay well.</li>
+                   <li>Include some protein. It contains an amino acid that your brain uses to help regulate your mood.</li>
+                   <br/>
+                  <li>Look after your gut health. Your gut can reflect how you're feeling: if you're stressed, it can speed up or slow down. Healthy food for your gut includes fruit, vegetables, beans and probiotics.</li>
+                  <li>Be aware of how caffeine can affect your mood. It can cause sleep problems, especially if you drink it close to bedtime, and some people find it makes them irritable and anxious too. Caffeine is found in coffee, tea, cola, energy drinks and chocolate.</li>
+                  <br/>
+
+               </ul>  
+
+      </div>
       </section>
-      <div class="spacer layer2"></div>
+      <div class="spacer layer18"></div>
       <section class="cn-white">
-         <h1 class="cn-title">How mindfulness helps mental wellbeing</h1>
-         Becoming more aware of the present moment can help us enjoy the world around us more and understand ourselves better.
-         When we become more aware of the present moment, we begin to experience afresh things that we have been taking for granted.
-         "Mindfulness also allows us to become more aware of the stream of thoughts and feelings that we experience," says Professor Williams, "and to see how we can become entangled in that stream in ways that are not helpful.
-         "This lets us stand back from our thoughts and start to see their patterns. Gradually, we can train ourselves to notice when our thoughts are taking over and realise that thoughts are simply 'mental events' that do not have to control us.
-         "Most of us have issues that we find hard to let go and mindfulness can help us deal with them more productively. We can ask: 'Is trying to solve this by brooding about it helpful, or am I just getting caught up in my thoughts?'
-         "Awareness of this kind also helps us notice signs of stress or anxiety earlier and helps us deal with them better."
-         Mindfulness is recommended by the National Institute for Health and Care Excellence (NICE) as a way to prevent depression in people who have had 3 or more bouts of depression in the past.
+         <h1 class="cn-title">Sharing meals with other people</h1>
+         There are many psychological, social and biological benefits of eating meals with other people. They give us a sense of rhythm and regularity in our lives, a chance to reflect on the day, and feel connected to others. Biologically, eating in upright chairs helps with our digestion. Talking and listening also slows us down so we don’t eat too fast.
+
+         Make the most of mealtimes by setting aside at least one day a week to eat with family and friends. Choose a meal that’s easy to prepare so it doesn’t become a chore. Share responsibility so everyone has a different task: doing the shopping, setting the table, cooking or washing up, for example. Keep the television off so you can all talk and share.
       </section>
-      <div class="spacer layer3"></div>
-      <section class="cn-green cn-text-white">
-         <h1 class="cn-title-white"> How to be more mindful</h1>
-         Reminding yourself to take notice of your thoughts, feelings, body sensations and the world around you is the first step to mindfulness.
-         </br>
-         <div class="columns">
-            <h4 class="cn-title2-white">Watch your thoughts</h4>
-            "Some people find it very difficult to practice mindfulness. As soon as they stop what they're doing, lots of thoughts and worries crowd in," says Professor Williams. 
-            "It might be useful to remember that mindfulness isn't about making these thoughts go away, but rather about seeing them as mental events.
-            "Imagine standing at a bus station and seeing 'thought buses' coming and going without having to get on them and be taken away. This can be very hard at first, but with gentle persistence it is possible.
-            "Some people find that it is easier to cope with an over-busy mind if they are doing gentle yoga or walking."
-            <h4 class="cn-title2-white">Free yourself from the past and future</h4>
-            You can practise mindfulness anywhere, but it can be especially helpful to take a mindful approach if you realise that, for several minutes, you have been "trapped" in reliving past problems or "pre-living" future worries.
-            <h4 class="cn-title2-white">Try something new</h4>
-            Trying new things, such as sitting in a different seat in meetings or going somewhere new for lunch, can also help you notice the world in a new way.
-            <h4 class="cn-title2-white">Notice the everyday</h4>
-            "Even as we go about our daily lives, we can notice the sensations of things, the food we eat, the air moving past the body as we walk," says Professor Williams. "All this may sound very small, but it has huge power to interrupt the 'autopilot' mode we often engage day to day, and to give us new perspectives on life."
-            <h4 class="cn-title2-white">Keep it regular</h4>
-            It can be helpful to pick a regular time – the morning journey to work or a walk at lunchtime – during which you decide to be aware of the sensations created by the world around you.
-         </br>
-        </br>
-        </div>
+      <div class="spacer layer19"></div>
+      <section class="cn-brick cn-text-white">
+         <h1 class="cn-title-blue">What should I eat?</h1>
+         <h4 class="cn-title2">Eatwell Guide</h4>
+         The Eatwell Guide divides the foods we eat and drink into 5 main food groups.
+         Try to choose a variety of different foods from each of the groups to help you get the wide range of nutrients your body needs to stay healthy.
+         It's important to get some fat in your diet, but foods that are high in fat, salt and sugar have been placed outside of the circular image as they're not necessary as part of a healthy, balanced diet and most of us need to cut down on these.
+         Unsaturated fats from plant sources (for example, vegetable oil or olive oil) are healthier types of fat.     
+         But all types of fat are high in energy (calories), so they should only be eaten in small amounts.
+         On average, women should have around 2,000 calories a day (8,400 kilojoules) and men should have around 2,500 calories a day (10,500 kilojoules). Most adults consume more calories than they need.
+         <img src="../Images/food-bubble.png" alt="Food Categories" >
       </section>
-      <div class="spacer layer4"></div>
-      <section class="cn-white">
-         <h1 class="cn-title">Different mindfulness practices</h1>
-         As well as practising mindfulness in daily life, it can be helpful to set aside time for a more formal mindfulness practice.
-         Mindfulness meditation involves sitting silently and paying attention to thoughts, sounds, the sensations of breathing or parts of the body, bringing your attention back whenever the mind starts to wander.
-         Yoga and tai-chi can also help with developing awareness of your breathing.
-      </section>
-      <div class="spacer layer9"></div>
-      <section class="cn-purple cn-text">
-         <h1 class="cn-title">Is mindfulness helpful for everyone?</h1>
-         "Mindfulness isn't the answer to everything, and it's important that our enthusiasm doesn't run ahead of the evidence," says Professor Williams.
-         "There's encouraging evidence for its use in health, education, prisons and workplaces, but it's important to realise that research is still going on in all of these fields. Once we have the results, we'll be able to see more clearly who mindfulness is most helpful for."
-      </section>
-      <div class="spacer layer10"></div>
+      <div class="spacer layer20"></div>
       <div class="footer-content">
          <b>Mental Assist</b>
          Glasgow Caledonian University - Honours Project [MHW225671] </br>
