--- a/views/lockdown.ejs
+++ b/views/lockdown.ejs
@@ -48,66 +48,66 @@
             </svg>
             
          <h1 class="cn-title">Lockdown</h1>
-         It can be easy to rush through life without stopping to notice much. Paying more attention to the present moment - to your own thoughts and feelings, and to the world around you – can improve your mental wellbeing.
-         Some people call this awareness "mindfulness". Mindfulness can help us enjoy life more and understand ourselves better. You can take steps to develop it in your own life.
+         Staying at home because you have or might have coronavirus (COVID-19) can be difficult, but it's important to stop the virus spreading to other people. Help and support is available while you're at home.
       </section>
-      <div class="spacer layer1"></div>
-      <section class="cn-yellow">
-         <h1 class="cn-title">What is mindfulness?</h1>
-         Professor Mark Williams, former director of the Oxford Mindfulness Centre, says that mindfulness means knowing directly what is going on inside and outside ourselves, moment by moment.
-         "It's easy to stop noticing the world around us. It's also easy to lose touch with the way our bodies are feeling and to end up living 'in our heads' – caught up in our thoughts without stopping to notice how those thoughts are driving our emotions and behaviour," he says.
-         "An important part of mindfulness is reconnecting with our bodies and the sensations they experience. This means waking up to the sights, sounds, smells and tastes of the present moment. That might be something as simple as the feel of a banister as we walk upstairs.
-         "Another important part of mindfulness is an awareness of our thoughts and feelings as they happen moment to moment.
-         "It's about allowing ourselves to see the present moment clearly. When we do that, it can positively change the way we see ourselves and our lives."
+      <div class="spacer layer21"></div>
+      <section class="cn-ocean">
+         <h1 class="cn-title">Mental wellbeing while staying at home</h1>
+         Taking care of your mind as well as your body is really important if you are self-isolating because of coronavirus (COVID-19).
+
+You may feel worried or anxious about your finances or job, your health or those close to you. Perhaps you feel bored, frustrated or lonely. It's important to remember that it's OK to feel this way and that everyone reacts differently.
+
+Remember, for most of us, these feelings will pass. Staying at home may be difficult, but you're helping to protect yourself and others by doing it.
+
+There are things you can do now to help you keep on top of your mental wellbeing and cope with how you may feel if you're staying at home. Make sure you get further support if you feel you need it.
       </section>
-      <div class="spacer layer2"></div>
+      <div class="spacer layer22"></div>
       <section class="cn-white">
-         <h1 class="cn-title">How mindfulness helps mental wellbeing</h1>
-         Becoming more aware of the present moment can help us enjoy the world around us more and understand ourselves better.
-         When we become more aware of the present moment, we begin to experience afresh things that we have been taking for granted.
-         "Mindfulness also allows us to become more aware of the stream of thoughts and feelings that we experience," says Professor Williams, "and to see how we can become entangled in that stream in ways that are not helpful.
-         "This lets us stand back from our thoughts and start to see their patterns. Gradually, we can train ourselves to notice when our thoughts are taking over and realise that thoughts are simply 'mental events' that do not have to control us.
-         "Most of us have issues that we find hard to let go and mindfulness can help us deal with them more productively. We can ask: 'Is trying to solve this by brooding about it helpful, or am I just getting caught up in my thoughts?'
-         "Awareness of this kind also helps us notice signs of stress or anxiety earlier and helps us deal with them better."
-         Mindfulness is recommended by the National Institute for Health and Care Excellence (NICE) as a way to prevent depression in people who have had 3 or more bouts of depression in the past.
+         <h1 class="cn-title">Plan practical things</h1>
+         If you're unable to get to the shops, work out how you can get any household supplies you need. You could try asking neighbours or family friends, or find a delivery service. Continue accessing treatment and support for any existing physical or mental health problems where possible. Let services know you are staying at home, and discuss how to continue receiving support. If you need regular medicine, you might be able to order repeat prescriptions by phone, or online via a website or app. Contact your GP and ask if they offer this. You can also ask your pharmacy about getting your medicine delivered, or ask someone else to collect it for you.
       </section>
-      <div class="spacer layer3"></div>
-      <section class="cn-green cn-text-white">
-         <h1 class="cn-title-white"> How to be more mindful</h1>
-         Reminding yourself to take notice of your thoughts, feelings, body sensations and the world around you is the first step to mindfulness.
-         </br>
-         <div class="columns">
-            <h4 class="cn-title2-white">Watch your thoughts</h4>
-            "Some people find it very difficult to practice mindfulness. As soon as they stop what they're doing, lots of thoughts and worries crowd in," says Professor Williams. 
-            "It might be useful to remember that mindfulness isn't about making these thoughts go away, but rather about seeing them as mental events.
-            "Imagine standing at a bus station and seeing 'thought buses' coming and going without having to get on them and be taken away. This can be very hard at first, but with gentle persistence it is possible.
-            "Some people find that it is easier to cope with an over-busy mind if they are doing gentle yoga or walking."
-            <h4 class="cn-title2-white">Free yourself from the past and future</h4>
-            You can practise mindfulness anywhere, but it can be especially helpful to take a mindful approach if you realise that, for several minutes, you have been "trapped" in reliving past problems or "pre-living" future worries.
-            <h4 class="cn-title2-white">Try something new</h4>
-            Trying new things, such as sitting in a different seat in meetings or going somewhere new for lunch, can also help you notice the world in a new way.
-            <h4 class="cn-title2-white">Notice the everyday</h4>
-            "Even as we go about our daily lives, we can notice the sensations of things, the food we eat, the air moving past the body as we walk," says Professor Williams. "All this may sound very small, but it has huge power to interrupt the 'autopilot' mode we often engage day to day, and to give us new perspectives on life."
-            <h4 class="cn-title2-white">Keep it regular</h4>
-            It can be helpful to pick a regular time – the morning journey to work or a walk at lunchtime – during which you decide to be aware of the sensations created by the world around you.
-         </br>
-        </br>
+      <div class="spacer layer23"></div>
+      <section class="cn-orange">
+         <h1 class="cn-title">Stay connected to others</h1>
+         Maintaining healthy relationships with people you trust is important for your mental wellbeing.
+
+         Think about ways to stay in touch with friends and family – by phone, messaging, video calls or social media.
+            It's normal to feel a bit worried or frustrated if you need to self-isolate. Remember: it's OK to share your concerns with others you trust – opening up about the way you feel can really help.
+
+If you cannot speak to someone you know or if doing so has not helped, there are plenty of helplines you can try instead.
+            
         </div>
       </section>
-      <div class="spacer layer4"></div>
+      <div class="spacer layer24"></div>
       <section class="cn-white">
-         <h1 class="cn-title">Different mindfulness practices</h1>
-         As well as practising mindfulness in daily life, it can be helpful to set aside time for a more formal mindfulness practice.
-         Mindfulness meditation involves sitting silently and paying attention to thoughts, sounds, the sensations of breathing or parts of the body, bringing your attention back whenever the mind starts to wander.
-         Yoga and tai-chi can also help with developing awareness of your breathing.
+         <h1 class="cn-title">Look after your body</h1>
+         Our physical health has a big impact on how we feel. At times like these, it can be easy to fall into unhealthy patterns of behaviour that end up making you feel worse.
+Try to eat healthy, well-balanced meals, drink enough water and exercise regularly. Avoid smoking, drugs or drinking too much alcohol.
+If you are staying at home, you could try exercising indoors, as there are lots of free online classes. Or try an easy 10-minute home workout.
       </section>
-      <div class="spacer layer9"></div>
-      <section class="cn-purple cn-text">
-         <h1 class="cn-title">Is mindfulness helpful for everyone?</h1>
-         "Mindfulness isn't the answer to everything, and it's important that our enthusiasm doesn't run ahead of the evidence," says Professor Williams.
-         "There's encouraging evidence for its use in health, education, prisons and workplaces, but it's important to realise that research is still going on in all of these fields. Once we have the results, we'll be able to see more clearly who mindfulness is most helpful for."
-      </section>
-      <div class="spacer layer10"></div>
+      <div class="spacer layer25"></div>
+      <section class="cn-violet cn-text-white">
+         <h1 class="cn-title-white">Stay on top of difficult feelings</h1>
+         Concern about the COVID-19 outbreak and your health is normal. However, some people may experience intense anxiety that can affect their day-to-day life.
+
+Try to focus on the things you can control, such as how you act, who you speak to and where you get information from.
+
+It's fine to acknowledge that some things are outside of your control, but if constant thoughts about the situation are making you feel anxious or overwhelmed, try some ideas to help manage your anxiety.
+
+<br/>
+<br/>
+If you are staying at home, it might feel tempting to spend lot of time scrolling through social media and the news.
+
+If this leads to difficult feelings, try to avoid paying attention to things that makes you feel worried or left out – focus on positive distractions instead.
+<br/>
+<br/>
+If you are self-isolating it may be easy to neglect the things you usually enjoy doing, but this can lead to feeling bored, frustrated or low.
+
+Make an effort to focus on your favourite hobby if it's something you can still do at home. Or give something new a go: read, write, do crosswords or jigsaws, bake, or try drawing and painting. Whatever it is, find something that works for you.
+
+If you cannot think of anything you like doing, try learning something new at home. There are lots of free tutorials and courses online.
+</section>
+      <div class="spacer layer26"></div>
       <div class="footer-content">
          <b>Mental Assist</b>
          Glasgow Caledonian University - Honours Project [MHW225671] </br>
