Renamed folder Images>Media

--- a/public/CSS/Stylesheet.css
+++ b/public/CSS/Stylesheet.css
@@ -254,107 +254,107 @@ section {
 }
 
 .layer1 {
-	background-image: url("../Images/wave1.svg");
+	background-image: url("../Media/wave1.svg");
 }
 
 .layer2 {
-	background-image: url("../Images/wave2.svg");
+	background-image: url("../Media/wave2.svg");
 }
 
 .layer3 {
-	background-image: url("../Images/wave3.svg");
+	background-image: url("../Media/wave3.svg");
 }
 
 .layer4 {
-	background-image: url("../Images/wave4.svg");
+	background-image: url("../Media/wave4.svg");
 }
 
 .layer5 {
-	background-image: url("../Images/wave5.svg");
+	background-image: url("../Media/wave5.svg");
 }
 
 .layer6 {
-	background-image: url("../Images/wave6.svg");
+	background-image: url("../Media/wave6.svg");
 }
 
 .layer7 {
-	background-image: url("../Images/wave7.svg");
+	background-image: url("../Media/wave7.svg");
 }
 
 .layer8 {
-	background-image: url("../Images/wave8.svg");
+	background-image: url("../Media/wave8.svg");
 }
 
 .layer9 {
-	background-image: url("../Images/wave9.svg");
+	background-image: url("../Media/wave9.svg");
 }
 
 .layer10 {
-	background-image: url("../Images/wave10.svg");
+	background-image: url("../Media/wave10.svg");
 }
 
 .layer11 {
-	background-image: url("../Images/wave11.svg");
+	background-image: url("../Media/wave11.svg");
 }
 
 .layer12 {
-	background-image: url("../Images/wave12.svg");
+	background-image: url("../Media/wave12.svg");
 }
 
 .layer13 {
-	background-image: url("../Images/wave13.svg");
+	background-image: url("../Media/wave13.svg");
 }
 
 .layer14 {
-	background-image: url("../Images/wave14.svg");
+	background-image: url("../Media/wave14.svg");
 }
 
 .layer15 {
-	background-image: url("../Images/wave15.svg");
+	background-image: url("../Media/wave15.svg");
 }
 
 .layer16 {
-	background-image: url("../Images/wave16.svg");
+	background-image: url("../Media/wave16.svg");
 }
 
 .layer17 {
-	background-image: url("../Images/wave17.svg");
+	background-image: url("../Media/wave17.svg");
 }
 
 .layer18 {
-	background-image: url("../Images/wave18.svg");
+	background-image: url("../Media/wave18.svg");
 }
 
 .layer19 {
-	background-image: url("../Images/wave19.svg");
+	background-image: url("../Media/wave19.svg");
 }
 
 .layer20 {
-	background-image: url("../Images/wave20.svg");
+	background-image: url("../Media/wave20.svg");
 }
 
 .layer21 {
-	background-image: url("../Images/wave21.svg");
+	background-image: url("../Media/wave21.svg");
 }
 
 .layer22 {
-	background-image: url("../Images/wave22.svg");
+	background-image: url("../Media/wave22.svg");
 }
 
 .layer23 {
-	background-image: url("../Images/wave23.svg");
+	background-image: url("../Media/wave23.svg");
 }
 
 .layer24 {
-	background-image: url("../Images/wave24.svg");
+	background-image: url("../Media/wave24.svg");
 }
 
 .layer25 {
-	background-image: url("../Images/wave25.svg");
+	background-image: url("../Media/wave25.svg");
 }
 
 .layer26 {
-	background-image: url("../Images/wave26.svg");
+	background-image: url("../Media/wave26.svg");
 }
 
 .columns {
