--- a/views/lockdown.ejs
+++ b/views/lockdown.ejs
@@ -13,28 +13,28 @@
    <body>
       <div id="navbar">
          <a class="logo-box" href="/">
-         <img src="/Images/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Images/logo2.svg';" onmouseout="this.src='../Images/logo.svg';">
+         <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
      </a>
  
          <div class="topnav-right">
          <a class="underline" href="mindfulness">
-             <img src="../Images/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
+             <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
          </a>
          
          <a class="underline" href="habits">
-             <img src="../Images/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
+             <img src="../Media/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
          </a>
  
          <a class="underline" href="diet">
-             <img src="../Images/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
+             <img src="../Media/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
          </a>
  
          <a class="underline-active" href="lockdown">
-             <img src="../Images/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
+             <img src="../Media/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
          </a>
  
          <a class="underline" href="clinics">
-             <img src="../Images/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
+             <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
          </a>
        </div>
        </div>
