Server start-up instructions updated

--- a/views/clinics.ejs
+++ b/views/clinics.ejs
@@ -53,7 +53,8 @@
         <div class="spacer layer7"></div>
         <section class="cn-gray cn-text-white">
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d94210.01320849362!2d-4.289201805822592!3d55.8863562316755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smental%20assist!5e0!3m2!1sen!2suk!4v1644162342143!5m2!1sen!2suk" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d94210.01320849362!2d-4.289201805822592!3d55.8863562316755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smental%20assist!5e0!3m2!1sen!2suk!4v1644162342143!5m2!1sen!2suk" 
+     width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
 </section>
 <div class="spacer layer8"></div>
