--- a/views/habits.ejs
+++ b/views/habits.ejs
@@ -150,7 +150,7 @@
    <div class="footer-content">
       <b>Mental Assist</b>
       Glasgow Caledonian University - Honours Project [MHW225671] </br>
-      Ⓒ 2022 Copyright: Ivan Todorov [S1822426]
+      Ⓒ 2022 Copyright: Ivan Todorov [S1822426] ┃ Information by NHS 
       <div class="footer-link">
          <a class="footer-link-button" href="https://www.facebook.com/GlasgowCaledonianUniversity/" target="_blank"> <i
                class="fab fa-facebook-f icon"> </i></a>
