--- a/views/lockdown.ejs
+++ b/views/lockdown.ejs
@@ -111,7 +111,7 @@ If you cannot think of anything you like doing, try learning something new at ho
       <div class="footer-content">
          <b>Mental Assist</b>
          Glasgow Caledonian University - Honours Project [MHW225671] </br>
-         Ⓒ 2022 Copyright: Ivan Todorov [S1822426]
+         Ⓒ 2022 Copyright: Ivan Todorov [S1822426] ┃ Information by NHS 
          <div class="footer-link">
             <a class="footer-link-button" href="https://www.facebook.com/GlasgowCaledonianUniversity/" target="_blank"> <i class="fab fa-facebook-f icon"> </i></a>
             <a class="footer-link-button" href="https://twitter.com/gcu_studentlife" target="_blank"> <i class="fab fa-twitter icon"> </i></a>
