--- a/views/diet.ejs
+++ b/views/diet.ejs
@@ -14,33 +14,40 @@
 
 <body>
    <div id="navbar">
+      <input type="checkbox" id="check" />
+      <div class="menu">
+        <label class="button-click" for="check">
+          <span class="b">&#9776;</span>
+          <span class="x">X</span>
+        </label>
+        <ul class="menu-items">
       <a class="logo-box" href="/">
-         <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem"
-            onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
+      <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
+  </a>
+      <div class="topnav-right">
+      <a class="underline" href="mindfulness">
+          <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
+      </a>
+      
+      <a class="underline" href="habits">
+          <img src="../Media/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
       </a>
 
-      <div class="topnav-right">
-         <a class="underline" href="mindfulness">
-            <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness
-         </a>
+      <a class="underline-active" href="diet">
+          <img src="../Media/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
+      </a>
 
-         <a class="underline" href="habits">
-            <img src="../Media/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits
-         </a>
+      <a class="underline" href="lockdown">
+          <img src="../Media/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
+      </a>
 
-         <a class="underline-active" href="diet">
-            <img src="../Media/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet
-         </a>
-
-         <a class="underline" href="lockdown">
-            <img src="../Media/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem"> Lockdown
-         </a>
-
-         <a class="underline" href="clinics">
-            <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem"> Clinics
-         </a>
-      </div>
+      <a class="underline" href="clinics">
+          <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
+      </a>
+   </ul>
    </div>
+    </div>
+    </div>
    <div class="cn-whitespace"></div>
    <section>
       <svg width="90" height="90" viewBox="0 0 123 122" fill="black" xmlns="http://www.w3.org/2000/svg">
@@ -115,7 +122,7 @@
       But all types of fat are high in energy (calories), so they should only be eaten in small amounts.
       On average, women should have around 2,000 calories a day (8,400 kilojoules) and men should have around 2,500
       calories a day (10,500 kilojoules). Most adults consume more calories than they need.
-      <img src="../Media/food-bubble.png" alt="Food Categories">
+      <div class="food-bubble"> <img src="../Media/food-bubble.png" alt="Food Categories"> </div>
    </section>
    <div class="spacer layer20"></div>
    <div class="footer-content">
