--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,21 +12,39 @@
   </head>
   <body>
     <div id="navbar">
+      <input type="checkbox" id="check" />
+      <div class="menu">
+        <label class="button-click" for="check">
+          <span class="b">&#9776;</span>
+          <span class="x">X</span>
+        </label>
+        <ul class="menu-items">
       <a class="logo-box" href="/">
-        <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
-      </a>
+      <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
+  </a>
       <div class="topnav-right">
-        <a class="underline" href="mindfulness">
-          <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness </a>
-        <a class="underline" href="habits">
-          <img src="../Media/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits </a>
-        <a class="underline" href="diet">
-          <img src="../Media/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet </a>
-        <a class="underline" href="lockdown">
-          <img src="../Media/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem"> Lockdown </a>
-        <a class="underline" href="clinics">
-          <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem"> Clinics </a>
-      </div>
+      <a class="underline" href="mindfulness">
+          <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
+      </a>
+      
+      <a class="underline" href="habits">
+          <img src="../Media/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
+      </a>
+
+      <a class="underline" href="diet">
+          <img src="../Media/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
+      </a>
+
+      <a class="underline" href="lockdown">
+          <img src="../Media/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
+      </a>
+
+      <a class="underline" href="clinics">
+          <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
+      </a>
+   </ul>
+   </div>
+    </div>
     </div>
     <section class="showcase">
         <video src="../Media/video.mp4" muted loop autoplay></video>
