--- a/views/mindfulness.ejs
+++ b/views/mindfulness.ejs
@@ -12,10 +12,16 @@
    </head>
    <body>
       <div id="navbar">
+         <input type="checkbox" id="check" />
+         <div class="menu">
+           <label class="button-click" for="check">
+             <span class="b">&#9776;</span>
+             <span class="x">X</span>
+           </label>
+           <ul class="menu-items">
          <a class="logo-box" href="/">
          <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
      </a>
- 
          <div class="topnav-right">
          <a class="underline-active" href="mindfulness">
              <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
@@ -36,6 +42,8 @@
          <a class="underline" href="clinics">
              <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
          </a>
+      </ul>
+      </div>
        </div>
        </div>
       <div class="cn-whitespace"></div>
