--- a/views/clinics.ejs
+++ b/views/clinics.ejs
@@ -11,12 +11,17 @@
       <title>Mental Assist | Clinics</title>
 </head>
 <body>
-
     <div id="navbar">
+        <input type="checkbox" id="check" />
+        <div class="menu">
+          <label class="button-click" for="check">
+            <span class="b">&#9776;</span>
+            <span class="x">X</span>
+          </label>
+          <ul class="menu-items">
         <a class="logo-box" href="/">
         <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
     </a>
-
         <div class="topnav-right">
         <a class="underline" href="mindfulness">
             <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
@@ -37,6 +42,8 @@
         <a class="underline-active" href="clinics">
             <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
         </a>
+     </ul>
+     </div>
       </div>
       </div>
     <div class="cn-whitespace"></div> 
